examples/test/testpolicy14903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14903
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key23: value6
      key31: value15
      key30: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value24
          key32: value43
      podSelector:
        matchLabels:
          key9: value38
          key48: value11
